# rules_javascript

./: .bazelrc  .bazelrc.template  .deleted.bazelrc  .editorconfig  .eslintrc.js  .gitignore  .yarnrc.yml  BUILD.bazel  BUILD.file.bazel  DEVELOPING.md  LICENSE.txt  README.md  WORKSPACE  WORKSPACE.bazel  compiled.d.ts  compiled.js  example.proto  example2.proto  manifest.json  npm_data.bzl  package.json  packages.bzl  packages.json  prettierrc.yml  user.bazelrc
angular/: BUILD.bazel  providers.bzl  rules.bzl
angular/doc/: BUILD.bazel  doc.md
angular/js-compiler/: BUILD.bazel  tsconfig.json
angular/resource-compiler/: BUILD.bazel  tsconfig.json
angular/test/: BUILD.bazel  test_basic.sh  test_material.sh  test_replace.sh
bazel/runfiles/: BUILD.bazel  package.json
commonjs/: BUILD.bazel  providers.bzl  rules.bzl  workspace.bzl
commonjs/doc/: BUILD.bazel  doc.md
commonjs/fs/: BUILD.bazel  tsconfig.json
commonjs/manifest/: BUILD.bazel  package.json  rollup.config.cjs  rollup.config.js  tsconfig.json
commonjs/null/: BUILD.bazel
commonjs/package/: BUILD.bazel
commonjs/test/: BUILD.bazel  test_directory.sh
docs/: BUILD.bazel  angular.md  commonjs.md  default.md  docker.md  eslint.md  gen-docs.sh  gen.sh  index.md  javascript.md  jest.md  module.md  nodejs.md  npm.md  openapi.md  prettier.md  protobuf.md  protobufjs.md  rollup.md  rules.bzl  rules.md  rules_javascript.md  rules_nodejs.md  ts-proto.md  typescript-eslint.md  typescript.md  webpack.md
docs/stardoc/: angular.md  angular_providers.md  angular_rules.md  commonjs.md  commonjs_providers.md  commonjs_rules.md  commonjs_workspace.md  file_rules.md  javascript.md  javascript_providers.md  javascript_rules.md  javascript_workspace.md  jest.md  jest_rules.md  nodejs.md  nodejs_providers.md  nodejs_rules.md  nodejs_toolchains.md  nodejs_workspace.md  npm.md  npm_rules.md  npm_workspace.md  prettier.md  prettier_rules.md  protobuf.md  protobuf_aspects.md  protobuf_providers.md  protobuf_rules.md  protobufjs.md  protobufjs_providers.md  protobufjs_rules.md  rollup.md  rollup_providers.md  rollup_rules.md  rules.md  rules_workspace.md  ts-proto.md  ts-proto_providers.md  ts-proto_rules.md  typescript.md  (+6 more)
eslint/: BUILD.bazel  rules.bzl  runner.sh.tpl
eslint/doc/: BUILD.bazel  doc.md
eslint/linter/: BUILD.bazel  tsconfig.json
javascript/: BUILD.bazel  providers.bzl  rules.bzl  workspace.bzl
javascript/doc/: BUILD.bazel  doc.md
javascript/null/: BUILD.bazel
javascript/test/: BUILD.bazel  test_directory.sh
jest/: BUILD.bazel  haste-map.js  rules.bzl  runner.sh.tpl
jest/config/: BUILD.bazel  config.ts  index.ts  jest.ts  regex.ts  rollup.config.cjs  tsconfig.json
jest/doc/: BUILD.bazel
jest/test/: BUILD.bazel  test_basic.sh  test_dep.sh  test_shard.sh  test_snapshot.sh  test_tools.sh  test_transform.sh
nodejs/: BUILD.bazel  archive-runner.sh.tpl  create-fs-gen.sh  create-shim.sh  fs-gen.rollup.js  install-runner.sh.tpl  modules-binary-runner.sh.tpl  nodejs-resolve.sh  nodejs.BUILD.bazel  package-runner.sh.tpl  providers.bzl  repl-runner.sh.tpl  rules.bzl  runner.sh.tpl  simple-runner.sh.tpl  simple_runner.sh.tpl  toolchains.bzl  workspace.bzl
nodejs/archive-linker/: BUILD.bazel  tsconfig.json
nodejs/default/: BUILD.bazel  nodejs.bzl  rules.bzl
nodejs/doc/: BUILD.bazel  doc.md
nodejs/esm-linker/: BUILD.bazel  package.json  rollup.config.cjs  rollup.config.js  tsconfig.json
nodejs/fs-gen/: BUILD.bazel  tsconfig.json
nodejs/fs-linker/: BUILD.bazel  rollup.config.cjs  rollup.config.js  tsconfig.json
nodejs/module-details/: BUILD.bazel
nodejs/module-linker/: BUILD.bazel  rollup.config.cjs  rollup.config.js  tsconfig.json
nodejs/platform/: BUILD.bazel
nodejs/resolve/: BUILD.bazel  tsconfig.json
nodejs/runfile/: BUILD.bazel  tsconfig.json
nodejs/runtime/: BUILD.bazel  rollup.config.cjs
nodejs/shim/: BUILD.bazel  rollup.config.js  tsconfig.json
nodejs/test/: BUILD.bazel  test_binary.sh  test_binary_archive.sh  test_dep.sh  test_esm.sh  test_module_details.sh
npm/: BUILD.bazel  npm-publish.sh.tpl  rules.bzl  workspace.bzl  yarn-audit-runner.sh.tpl  yarn-resolve.sh.tpl
npm/doc/: BUILD.bazel  doc.md
npm/test/: BUILD.bazel  test_alias.sh  test_yarn_audit.sh
npm/yarn-gen/: BUILD.bazel  tsconfig.json
npm/yarn-resolve/: BUILD.bazel  tsconfig.json
openapi/: BUILD.bazel  rules.bzl
openapi/doc/: BUILD.bazel  doc.md
playwright/: BUILD.bazel  rules.bzl  runner.sh.tpl  runtime.js
playwright/config/: BUILD.bazel  tsconfig.json
playwright/test/: BUILD.bazel
prettier/: BUILD.bazel  rules.bzl
prettier/doc/: BUILD.bazel  doc.md
prettier/format/: BUILD.bazel  package.json  tsconfig.json
prettier/test/: BUILD.bazel
protobuf/: BUILD.bazel  aspects.bzl  providers.bzl  rules.bzl
protobuf/doc/: BUILD.bazel  doc.md
protobuf/test/: rules.bzl
rollup/: BUILD.bazel  providers.bzl  rules.bzl
rollup/config/: BUILD.bazel  tsconfig.json
rollup/doc/: BUILD.bazel  doc.md
rollup/test/: BUILD.bazel  test_basic.sh
rules/: BUILD.bazel  aspects.bzl  nodejs.bzl  npm_data.bzl  package.json  rules.bzl  tsconfig.common.json  workspace.bzl
rules/bzl/: npm_data.bzl  workspace.bzl
rules/commonjs/: providers.bzl  rules.bzl
rules/doc/: BUILD.bazel  doc.md
test/: BUILD.bazel  package.json  test.bazelrc  workspace0.bzl  workspace1.bzl
tests/: .bazelrc  BUILD.bazel  WORKSPACE  WORKSPACE.bazel  npm.bzl  npm_data.bzl  package.json  rules.bzl  search.proto  search_pb.js
tools/: .deleted.bazelrc  BUILD.bazel  aspects.bzl  deleted.bazelrc  deleted.bazelrc.tpl  format.sh  gen-bazelrc.sh  gen-deps.sh  gen-docs.sh  gen-js.sh  gen-npm.sh  install-deps.sh  install-node-modules.sh  install-npm.sh  lint.sh  rules.bzl
ts-proto/: BUILD.bazel  aspects.bzl  proto.tsconfig.json  providers.bzl  rules.bzl  tsconfig.proto.json
typescript/: BUILD.bazel  providers.bzl  rules.bzl  workspace.bzl
typescript-eslint/: BUILD.bazel  providers.bzl  rules.bzl
webpack/: BUILD.bazel  providers.bzl  rules.bzl  server-runner.sh.tpl  skip-package-check.js
worker/: BUILD.bazel  tsconfig.json
(+580 files in other folders)
