load("//commonjs:rules.bzl", "cjs_root")
load("//javascript:rules.bzl", "js_library")
load("//nodejs:rules.bzl", "nodejs_modules_archive")
load("//tools/npm:npm.bzl", "ROOTS")

package(default_visibility = ["//visibility:public"])

exports_files(["yarn.lock"])

js_library(
    name = "eslint_config",
    srcs = [".eslintrc.js"],
    root = ":root",
)

alias(
    name = "format",
    actual = "//tools/lint:format",
)

alias(
    name = "bazelrc_gen",
    actual = "//tools/bazel:bazelrc",
)

alias(
    name = "js_gen",
    actual = "//tools/javascript:js",
)

alias(
    name = "lint",
    actual = "//tools/lint",
)

js_library(
    name = "prettier_config",
    srcs = ["prettierrc.yml"],
    root = ":root",
)

cjs_root(
    name = "root",
    package_name = "@better-rules-javascript/root",
    descriptors = ["package.json"],
)

test_suite(
    name = "test",
    tests = [
        "//angular:test",
        "//commonjs:test",
        "//javascript:test",
        "//jest:test",
        "//nodejs:test",
        "//rollup:test",
        # "//ts-proto/test",
        "//typescript:test",
        "//webpack:test",
    ],
)
