load("//commonjs:rules.bzl", "cjs_root")
load("//javascript:rules.bzl", "js_library")
load("//nodejs:rules.bzl", "nodejs_modules_archive")
load("//tools/npm:npm.bzl", "ROOTS")

exports_files(
    ["yarn.lock"],
    visibility = ["//visibility:public"],  # tests
)

js_library(
    name = "eslint_config",
    srcs = [".eslintrc.js"],
    root = ":root",
    visibility = [":__subpackages__"],
)

alias(
    name = "format",
    actual = "//tools/lint:format",
)

alias(
    name = "bazelrc_gen",
    actual = "//tools/bazel:bazelrc",
)

alias(
    name = "js_gen",
    actual = "//tools/javascript:js",
)

alias(
    name = "lint",
    actual = "//tools/lint",
)

js_library(
    name = "prettier_config",
    srcs = ["prettierrc.yml"],
    root = ":root",
    visibility = [":__subpackages__"],
)

alias(
    name = "nodejs_resolve",
    actual = "//nodejs:nodejs_resolve",
)

cjs_root(
    name = "root",
    package_name = "@better-rules-javascript/root",
    descriptors = ["package.json"],
    visibility = [":__subpackages__"],
)

test_suite(
    name = "test",
    tests = [
        "//angular:test",
        "//commonjs:test",
        "//javascript:test",
        "//jest:test",
        "//nodejs:test",
        "//npm:test",
        "//rollup:test",
        # "//ts-proto/test",
        "//typescript:test",
        "//webpack:test",
    ],
)
