package(default_visibility = ["//visibility:public"])

filegroup(
    name = "buildifier_files",
    srcs = glob([pattern for root in [
        "files/",
        "files/commonjs/**/",
        "files/docs/**/",
        "files/javascript/**/",
        "files/npm/**/",
        "files/prettier/**/",
        "files/protobuf/**/",
        "files/protobufjs/**/",
        "files/rollup/**/",
        "files/util/**/",
        "files/worker/**/",
    ] for pattern in [
        "%s*.bazel" % root,
        "%s*.bzl" % root,
    ]]),
)

filegroup(
    name = "prettier_files",
    srcs = glob([pattern for root in [
        "files/",
        "files/commonjs/**/",
        "files/docs/**/",
        "files/javascript/**/",
        "files/npm/**/",
        "files/prettier/**/",
        "files/protobuf/**/",
        "files/protobufjs/**/",
        "files/rollup/**/",
        "files/util/**/",
        "files/worker/**/",
    ] for pattern in [
        "%s*.js" % root,
        "%s*.json" % root,
        "%s*.md" % root,
        "%s*.ts" % root,
        "%s*.yml" % root,
    ]]),
)

filegroup(
    name = "files",
    srcs = glob(["%s*" % root for root in [
        "files/",
        "files/commonjs/**/",
        "files/docs/**/",
        "files/javascript/**/",
        "files/npm/**/",
        "files/prettier/**/",
        "files/protobuf/**/",
        "files/protobufjs/**/",
        "files/rollup/**/",
        "files/util/**/",
        "files/worker/**/",
    ]]),
)
