workspace(name = "better_rules_javascript")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Skylib

SKYLIB_VERSION = "d54e8a70ce90a24b921381cbe84fa0b88b22dc46"

http_archive(
    name = "bazel_skylib",
    sha256 = "7345a2c1b005aeead6dd402345a665cc514ae229100ff1e5e40f9939efd6856b",
    strip_prefix = "bazel-skylib-%s" % SKYLIB_VERSION,
    urls = ["https://github.com/bazelbuild/bazel-skylib/archive/%s.tar.gz" % SKYLIB_VERSION],
)

# File

FILE_VERSION = "fd7ad6a7e9f3438fddb41683f33b6b4d07d067fe"

http_archive(
    name = "rules_file",
    sha256 = "9108bf11fe1063bb6268f15506ea35c1a29e03cae651032d1da3d0f33561c5fd",
    strip_prefix = "rules_file-%s" % FILE_VERSION,
    url = "https://github.com/hello-seer/rules_file/archive/%s.zip" % FILE_VERSION,
)

load("@rules_file//file:workspace.bzl", "files")

# Python

PYTHON_VERSION = "0.6.0"

http_archive(
    name = "rules_python",
    sha256 = "a30abdfc7126d497a7698c29c46ea9901c6392d6ed315171a6df5ce433aa4502",
    strip_prefix = "rules_python-%s" % PYTHON_VERSION,
    url = "https://github.com/bazelbuild/rules_python/archive/%s.tar.gz" % PYTHON_VERSION,
)

# Go
GO_VERSION = "v0.38.1"

http_archive(
    name = "io_bazel_rules_go",
    sha256 = "dd926a88a564a9246713a9c00b35315f54cbd46b31a26d5d8fb264c07045f05d",
    url = "https://github.com/bazelbuild/rules_go/releases/download/%s/rules_go-%s.zip" % (GO_VERSION, GO_VERSION),
)

load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")

go_rules_dependencies()

go_register_toolchains(version = "1.19.5")

# Pkg

PKG_VERSION = "0.7.0"

http_archive(
    name = "rules_pkg",
    sha256 = "8a298e832762eda1830597d64fe7db58178aa84cd5926d76d5b744d6558941c2",
    url = "https://github.com/bazelbuild/rules_pkg/releases/download/%s/rules_pkg-%s.tar.gz" % (PKG_VERSION, PKG_VERSION),
)

# Protobuf

PROTO_VERSION = "5.3.0-21.7"

http_archive(
    name = "rules_proto",
    sha256 = "dc3fb206a2cb3441b485eb1e423165b231235a1ea9b031b4433cf7bc1fa460dd",
    strip_prefix = "rules_proto-%s" % PROTO_VERSION,
    urls = ["https://github.com/bazelbuild/rules_proto/archive/%s.tar.gz" % PROTO_VERSION],
)

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies", "rules_proto_toolchains")

rules_proto_dependencies()

rules_proto_toolchains()

# Proto GRPC

PROTO_GRPC_VERSION = "2.0.0"

http_archive(
    name = "rules_proto_grpc",
    sha256 = "d771584bbff98698e7cb3cb31c132ee206a972569f4dc8b65acbdd934d156b33",
    strip_prefix = "rules_proto_grpc-%s" % PROTO_GRPC_VERSION,
    urls = ["https://github.com/rules-proto-grpc/rules_proto_grpc/archive/%s.tar.gz" % PROTO_GRPC_VERSION],
)

load("@rules_proto_grpc//:repositories.bzl", "rules_proto_grpc_repos", "rules_proto_grpc_toolchains")

rules_proto_grpc_toolchains()

rules_proto_grpc_repos()

# Protobuf

http_archive(
    name = "com_google_protobuf",
    sha256 = "9b4ee22c250fe31b16f1a24d61467e40780a3fbb9b91c3b65be2a376ed913a1a",
    strip_prefix = "protobuf-3.13.0",
    url = "https://github.com/protocolbuffers/protobuf/archive/v3.13.0.tar.gz",
)

load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")

protobuf_deps()

# Buildtools
BUILDTOOLS_VERSION = "6.0.1"

http_archive(
    name = "com_github_bazelbuild_buildtools",
    sha256 = "2abb7494488d7232acf43a13f6be886dff2c72c4b928a9861074089493015312",
    strip_prefix = "buildtools-%s" % BUILDTOOLS_VERSION,
    url = "https://github.com/bazelbuild/buildtools/archive/%s.zip" % BUILDTOOLS_VERSION,
)

load("@com_github_bazelbuild_buildtools//buildifier:deps.bzl", "buildifier_dependencies")

buildifier_dependencies()

# Rules license

RULES_LICENSE_VERSION = "5dfafe2ae7a38ede7480d342d7d770308bd64406"

http_archive(
    name = "rules_license",
    sha256 = "6a2534cd8374a00e1bb4a061f8d2a483ae182f7ce67849e27f5a149f5c4a9e19",
    strip_prefix = "rules_license-%s" % RULES_LICENSE_VERSION,
    url = "https://github.com/bazelbuild/rules_license/archive/%s.zip" % RULES_LICENSE_VERSION,
)

# Pkg

PKG_VERSION = "55a1a9b2eca5b78a44fb940f3143a1d88423c2e2"

http_archive(
    name = "rules_pkg",
    sha256 = "88d65eedeb9a26708b859a0850bf11aa478cabe49733f5169cada1ed86fe7241",
    strip_prefix = "rules_pkg-%s/pkg" % PKG_VERSION,
    url = "https://github.com/bazelbuild/rules_pkg/archive/%s.zip" % PKG_VERSION,
)

load("@rules_pkg//:deps.bzl", "rules_pkg_dependencies")

rules_pkg_dependencies()

# Java

JAVA_VERSION = "7cf3cefd652008d0a64a419c34c13bdca6c8f178"

http_archive(
    name = "rules_java",
    sha256 = "bc81f1ba47ef5cc68ad32225c3d0e70b8c6f6077663835438da8d5733f917598",
    strip_prefix = "rules_java-%s" % JAVA_VERSION,
    urls = [
        "https://github.com/bazelbuild/rules_java/archive/%s.zip" % JAVA_VERSION,
    ],
)

# Stardoc

STARDOC_VERSION = "2ce2df8ff305cc6161206359ef0a424cea7df83c"

http_archive(
    name = "io_bazel_stardoc",
    sha256 = "74dfbca5ec4ee54c1b4f977781619a8f4f7cab98f3bc26c98ef80d7386884a8a",
    strip_prefix = "stardoc-%s" % STARDOC_VERSION,
    url = "https://github.com/bazelbuild/stardoc/archive/%s.zip" % STARDOC_VERSION,
)

# Rivet Bazel Util

RIVET_BAZEL_UTIL_VERSION = "88685d737d73dee74e880e589a6be2569f7f59ed"

http_archive(
    name = "rivet_bazel_util",
    sha256 = "293dc40fe14073432e9f143222e782f0ce25807f5a0f3c1efec05b4daf9f7ca0",
    strip_prefix = "rivet-bazel-util-%s" % RIVET_BAZEL_UTIL_VERSION,
    url = "https://github.com/rivethealth/rivet-bazel-util/archive/%s.tar.gz" % RIVET_BAZEL_UTIL_VERSION,
)

# JavaScript

load("//rules:workspace.bzl", javascript_repositories = "repositories")

javascript_repositories()

files(
    name = "files",
    build = "@better_rules_javascript//tools/file:files.bazel",
    ignores = [
        ".git",
        ".yarn",
        "node_modules",
        "rules/.yarn",
    ],
    root_file = "//:WORKSPACE.bazel",
)

# NPM

load("//tools/npm:npm.bzl", "PACKAGES", "ROOTS")
load("//commonjs:workspace.bzl", "cjs_directory_npm_plugin")
load("//npm:workspace.bzl", "npm")
load("//typescript:workspace.bzl", "ts_directory_npm_plugin")

plugins = [
    cjs_directory_npm_plugin(),
    ts_directory_npm_plugin(),
]

npm("npm", PACKAGES, ROOTS, plugins)
