workspace(name = "better_rules_javascript")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Skylib

SKYLIB_VERSION = "d54e8a70ce90a24b921381cbe84fa0b88b22dc46"

http_archive(
    name = "bazel_skylib",
    sha256 = "7345a2c1b005aeead6dd402345a665cc514ae229100ff1e5e40f9939efd6856b",
    strip_prefix = "bazel-skylib-%s" % SKYLIB_VERSION,
    urls = ["https://github.com/bazelbuild/bazel-skylib/archive/%s.tar.gz" % SKYLIB_VERSION],
)

# File

FILE_VERSION = "dc12043e23645d9f66fdc53cbb5bd1047f25ea8a"

http_archive(
    name = "rules_file",
    sha256 = "38f0229bf6183d5f0c7ffeaf3b69978d19efdeb00538a74902030544147e4fec",
    strip_prefix = "rules_file-%s" % FILE_VERSION,
    url = "https://github.com/redoapp/rules_file/archive/%s.zip" % FILE_VERSION,
)

load("@rules_file//buildifier:workspace.bzl", "buildifier_repositories", "buildifier_toolchains")

buildifier_repositories()

buildifier_toolchains()

load("@rules_file//file:workspace.bzl", "files")

# Python

PYTHON_VERSION = "0.32.2"

http_archive(
    name = "rules_python",
    sha256 = "4912ced70dc1a2a8e4b86cec233b192ca053e82bc72d877b98e126156e8f228d",
    strip_prefix = "rules_python-%s" % PYTHON_VERSION,
    url = "https://github.com/bazelbuild/rules_python/archive/%s.tar.gz" % PYTHON_VERSION,
)

load("@rules_python//python:repositories.bzl", "py_repositories")

py_repositories()

load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python_3_11",
    python_version = "3.11",
)

# Go
GO_VERSION = "v0.44.2"

http_archive(
    name = "io_bazel_rules_go",
    sha256 = "7c76d6236b28ff695aa28cf35f95de317a9472fd1fb14ac797c9bf684f09b37c",
    url = "https://github.com/bazelbuild/rules_go/releases/download/%s/rules_go-%s.zip" % (GO_VERSION, GO_VERSION),
)

load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")

go_rules_dependencies()

go_register_toolchains(version = "1.19.5")

# Pkg

PKG_VERSION = "e7a1ba187c96df78d83f1adb0eac1b7db24f96bc"

http_archive(
    name = "rules_pkg",
    sha256 = "468b63f58ebee5287ce6ae0762e3b2893508924f5badb0f3ab73382ead6bdf94",
    strip_prefix = "rules_pkg-%s" % PKG_VERSION,
    url = "https://github.com/bazelbuild/rules_pkg/archive/%s.tar.gz" % PKG_VERSION,
)

# Protobuf

PROTO_VERSION = "5.3.0-21.7"

http_archive(
    name = "rules_proto",
    sha256 = "dc3fb206a2cb3441b485eb1e423165b231235a1ea9b031b4433cf7bc1fa460dd",
    strip_prefix = "rules_proto-%s" % PROTO_VERSION,
    urls = ["https://github.com/bazelbuild/rules_proto/archive/%s.tar.gz" % PROTO_VERSION],
)

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies", "rules_proto_toolchains")

rules_proto_dependencies()

rules_proto_toolchains()

# Protobuf

http_archive(
    name = "com_google_protobuf",
    sha256 = "da288bf1daa6c04d03a9051781caa52aceb9163586bff9aa6cfb12f69b9395aa",
    strip_prefix = "protobuf-27.0",
    url = "https://github.com/protocolbuffers/protobuf/archive/v27.0.tar.gz",
)

load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")

protobuf_deps()

# Buildtools
BUILDTOOLS_VERSION = "6.0.1"

http_archive(
    name = "com_github_bazelbuild_buildtools",
    sha256 = "2abb7494488d7232acf43a13f6be886dff2c72c4b928a9861074089493015312",
    strip_prefix = "buildtools-%s" % BUILDTOOLS_VERSION,
    url = "https://github.com/bazelbuild/buildtools/archive/%s.zip" % BUILDTOOLS_VERSION,
)

load("@com_github_bazelbuild_buildtools//buildifier:deps.bzl", "buildifier_dependencies")

buildifier_dependencies()

# Rules license

RULES_LICENSE_VERSION = "5dfafe2ae7a38ede7480d342d7d770308bd64406"

http_archive(
    name = "rules_license",
    sha256 = "6a2534cd8374a00e1bb4a061f8d2a483ae182f7ce67849e27f5a149f5c4a9e19",
    strip_prefix = "rules_license-%s" % RULES_LICENSE_VERSION,
    url = "https://github.com/bazelbuild/rules_license/archive/%s.zip" % RULES_LICENSE_VERSION,
)

# Pkg

PKG_VERSION = "0aa9277cc66fa26b519a1ad8abac0215fc987484"

http_archive(
    name = "rules_pkg",
    sha256 = "d808248021ffc77c731ef516f0efa67085aa8521bd8ccf72421ecf9274ab50d5",
    strip_prefix = "rules_pkg-%s" % PKG_VERSION,
    url = "https://github.com/bazelbuild/rules_pkg/archive/%s.tar.gz" % PKG_VERSION,
)

load("@rules_pkg//:deps.bzl", "rules_pkg_dependencies")

rules_pkg_dependencies()

# Java

JAVA_VERSION = "7cf3cefd652008d0a64a419c34c13bdca6c8f178"

http_archive(
    name = "rules_java",
    sha256 = "bc81f1ba47ef5cc68ad32225c3d0e70b8c6f6077663835438da8d5733f917598",
    strip_prefix = "rules_java-%s" % JAVA_VERSION,
    urls = [
        "https://github.com/bazelbuild/rules_java/archive/%s.zip" % JAVA_VERSION,
    ],
)

# Stardoc

STARDOC_VERSION = "2ce2df8ff305cc6161206359ef0a424cea7df83c"

http_archive(
    name = "io_bazel_stardoc",
    sha256 = "74dfbca5ec4ee54c1b4f977781619a8f4f7cab98f3bc26c98ef80d7386884a8a",
    strip_prefix = "stardoc-%s" % STARDOC_VERSION,
    url = "https://github.com/bazelbuild/stardoc/archive/%s.zip" % STARDOC_VERSION,
)

# Rivet Bazel Util

RIVET_BAZEL_UTIL_VERSION = "88685d737d73dee74e880e589a6be2569f7f59ed"

http_archive(
    name = "rivet_bazel_util",
    sha256 = "293dc40fe14073432e9f143222e782f0ce25807f5a0f3c1efec05b4daf9f7ca0",
    strip_prefix = "rivet-bazel-util-%s" % RIVET_BAZEL_UTIL_VERSION,
    url = "https://github.com/rivethealth/rivet-bazel-util/archive/%s.tar.gz" % RIVET_BAZEL_UTIL_VERSION,
)

# JavaScript

load("//rules:workspace.bzl", javascript_repositories = "repositories")

javascript_repositories()

files(
    name = "files",
    build = "@better_rules_javascript//tools/file:files.bazel",
    ignores = [
        ".git",
        ".yarn",
        "node_modules",
        "rules/.yarn",
    ],
    root_file = "//:WORKSPACE.bazel",
)

# NPM

load("//tools/npm:workspace.bzl", "npm_deps")

npm_deps()
