load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "//commonjs:bzl",
        "//javascript:bzl",
        "//nodejs:bzl",
        "//typescript:bzl",
        "//util:bzl",
        "@rules_file//util:bzl",
    ],
    visibility = ["//visibility:public"],
)

test_suite(
    name = "test",
    tests = ["//angular/test"],
    visibility = ["//:__subpackages__"]
)
