load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["**/*.bzl"]),
    visibility = ["//angular/doc:__subpackages__"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//commonjs:bzl",
        "//javascript:bzl",
        "//nodejs:bzl",
        "//typescript:bzl",
        "//util:bzl",
        "@rules_file//util:bzl",
    ],
)

test_suite(
    name = "test",
    tests = ["//angular/test"],
    visibility = ["//:__subpackages__"],
)
