load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files(
    glob(["**/*.bzl"]),
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "//util:bzl",
        "@rules_file//util:bzl",
    ],
)

test_suite(
    name = "test",
    tests = ["//commonjs/test"],
)
