load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["**/*.bzl"]),
    visibility = ["//commonjs/doc:__subpackages__"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//util:bzl",
        "@rules_file//util:bzl",
    ],
)

test_suite(
    name = "test",
    tests = ["//commonjs/test"],
    visibility = ["//:__subpackages__"],
)
