load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "docs",
    srcs = [
        "//commonjs/doc",
        "//javascript/doc",
        "//jest/doc",
        "//nodejs/doc",
        "//npm/doc",
        "//prettier/doc",
        "//protobuf/doc",
        "//protobufjs/doc",
        "//rollup/doc",
        "//rules/doc",
        "//ts-proto/doc",
        "//typescript/doc",
        "//webpack/doc",
    ],
    mode = "0644",
)
