load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    ["runner.sh.tpl"],
    visibility = ["//visibility:public"],
)

exports_files(
    glob(["**/*.bzl"]),
    visibility = ["//eslint/doc:__subpackages__"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//commonjs:bzl",
        "//javascript:bzl",
        "//nodejs:bzl",
        "//util:bzl",
        "@rules_file//generate:bzl",
    ],
)

alias(
    name = "eslint_lib",
    actual = "@npm//eslint:lib",
    visibility = ["//visibility:public"],
)
