load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@better_rules_typescript//typescript:rules.bzl", "ts_import")
load("//javascript:rules.bzl", "js_library")

package(default_visibility = ["//visibility:public"])

exports_files(glob(["**/*.bzl"]))

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "//util:bzl",
    ],
)
