load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "//commonjs:bzl",
        "//util:bzl",
    ],
)

string_flag(
    name = "language",
    build_setting_default = "es2020",
)

string_flag(
    name = "module",
    build_setting_default = "es2020",
    values = [
        "amd",
        "commonjs",
        "es2015",
        "es2020",
        "esnext",
        "node",
        "umd",
        "system",
    ],
)

bool_flag(
    name = "source_map",
    build_setting_default = True,
)

test_suite(
    name = "test",
    tests = ["//javascript/test"],
)
