load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")

exports_files(
    glob(["**/*.bzl"]),
    visibility = ["//javascript/doc:__subpackages__"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//commonjs:bzl",
        "//util:bzl",
    ],
)

string_flag(
    name = "language",
    build_setting_default = "es2020",
    visibility = ["//visibility:public"],
)

string_flag(
    name = "module",
    build_setting_default = "es2020",
    values = [
        "amd",
        "commonjs",
        "es2015",
        "es2020",
        "esnext",
        "node",
        "umd",
        "system",
    ],
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "source_map",
    build_setting_default = True,
    visibility = ["//visibility:public"],
)

test_suite(
    name = "test",
    tests = ["//javascript/test"],
    visibility = ["//:__subpackages__"],
)
