load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "runner",
    srcs = ["runner.sh.tpl"],
)

filegroup(
    name = "haste_map",
    srcs = ["haste-map.js"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "//commonjs:bzl",
        "//javascript:bzl",
        "//util:bzl",
        "@bazel_skylib//lib:shell",
    ],
)
