load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["**/*.bzl"]),
    visibility = ["//javascript/doc:__subpackages__"],
)

exports_files(
    ["runner.sh.tpl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//commonjs:bzl",
        "//javascript:bzl",
        "//nodejs:bzl",
        "//util:bzl",
        "@bazel_skylib//lib:shell",
    ],
)

test_suite(
    name = "test",
    tests = ["//jest/test"],
    visibility = ["//:__subpackages__"],
)
