load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files(["nodejs.BUILD.bazel"])

filegroup(
    name = "archive_runner",
    srcs = ["archive-runner.sh.tpl"],
)

filegroup(
    name = "install_runner",
    srcs = ["install-runner.sh.tpl"],
)

alias(
    name = "nodejs",
    actual = "//nodejs/default:nodejs",
)

filegroup(
    name = "simple_runner",
    srcs = ["simple-runner.sh.tpl"],
)

filegroup(
    name = "runner",
    srcs = ["runner.sh.tpl"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "//javascript:bzl",
        "//third-party:repo_bzl",
        "//util:bzl",
        "@bazel_skylib//lib:shell",
    ],
)

sh_binary(
    name = "nodejs_resolve",
    srcs = ["nodejs-resolve.sh"],
    data = ["//nodejs/resolve:bin"],
)

test_suite(
    name = "test",
    tests = ["//nodejs/test"],
)
