load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["**/*.bzl"]),
    visibility = ["//nodejs/doc:__subpackages__"],
)

exports_files(
    [
        "archive-runner.sh.tpl",
        "install-runner.sh.tpl",
        "simple-runner.sh.tpl",
        "runner.sh.tpl",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "nodejs",
    actual = "//nodejs/default:nodejs",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//javascript:bzl",
        "//third-party:repo_bzl",
        "//util:bzl",
        "@bazel_skylib//lib:shell",
    ],
)

sh_binary(
    name = "nodejs_resolve",
    srcs = ["nodejs-resolve.sh"],
    data = ["//nodejs/resolve:bin"],
    visibility = ["//:__subpackages__"],
)

alias(
    name = "system_nodejs",
    actual = "//nodejs/default:system_nodejs",
    visibility = ["//visibility:public"],
)

test_suite(
    name = "test",
    tests = ["//nodejs/test"],
    visibility = ["//:__subpackages__"],
)
