load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//nodejs:rules.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

exports_files([
    "yarn-audit-runner.sh.tpl",
    "yarn-resolve.sh.tpl",
])

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "//commonjs:bzl",
        "//javascript:bzl",
        "//util:bzl",
        "@bazel_skylib//lib:shell",
    ],
)

nodejs_binary(
    name = "yarn",
    dep = "@better_rules_javascript_npm//@yarnpkg/cli-dist:lib",
    main = "bin/yarn.js",
    node = "//rules:nodejs",
)
